--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 16:05:13 2018</p>
+         Last Run: Wed Nov 14 17:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,37 +32,37 @@
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
-                        <td>-3</td>
-                        <td>2</td>
-                        <td>69</td>
+                        <td>-2</td>
+                        <td>1</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>19</td>
-                        <td>NW</td>
-                        <td>31</td>
+                        <td>18</td>
+                        <td>WNW</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>4</td>
-                        <td>74</td>
+                        <td>2</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>31</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>4</td>
-                        <td>75</td>
+                        <td>3</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>30</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-3",
                  "-3"
                ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "1",
                  "2",
-                 "4",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "74",
-                 "75"
+                 "67",
+                 "72",
+                 "74"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "34",
                  "31",
-                 "31",
-                 "30"
+                 "27"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 16:05:13 2018</p>
+         Last Run: Wed Nov 14 17:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -272,11 +272,11 @@
                         <td>10:00 AM</td>
                         <td>Clear</td>
                         <td>-7</td>
-                        <td>-11</td>
+                        <td>-12</td>
                         <td>3</td>
                         <td>73</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>1</td>
                      </tr>
@@ -286,7 +286,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>2</td>
-                        <td>63</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -320,7 +320,7 @@
                "data":[
                  "-18",
                  "-14",
-                 "-11",
+                 "-12",
                  "-7"
                ]
              },
@@ -407,7 +407,7 @@
                  "90",
                  "82",
                  "73",
-                 "63"
+                 "62"
                ]
              },
              {
@@ -459,7 +459,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 16:05:13 2018</p>
+         Last Run: Wed Nov 14 17:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -484,11 +484,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>56</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -496,7 +496,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
@@ -510,9 +510,9 @@
                         <td>2</td>
                         <td>48</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>49</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -621,8 +621,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "51",
+                 "58",
+                 "52",
                  "48"
                ]
              },
@@ -632,9 +632,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
+                 "57",
                  "52",
-                 "49"
+                 "48"
                ]
              }
            ]
@@ -674,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 16:05:13 2018</p>
+         Last Run: Wed Nov 14 17:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -696,14 +696,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>46</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -711,23 +711,23 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>42</td>
+                        <td>10</td>
+                        <td>WSW</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>39</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,9 +754,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
                  "-6",
-                 "-6"
+                 "-6",
+                 "-7"
                ]
              },
              {
@@ -766,9 +766,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
                  "-2",
-                 "-2"
+                 "-2",
+                 "-3"
                ]
              }
            ]
@@ -836,9 +836,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
                  "70",
-                 "70"
+                 "71",
+                 "72"
                ]
              },
              {
@@ -847,9 +847,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "42",
-                 "39"
+                 "47",
+                 "43",
+                 "40"
                ]
              }
            ]
