--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 18:05:04 2018</p>
+         Last Run: Wed Nov 14 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,34 +30,34 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>4</td>
+                        <td>Clear</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>0</td>
+                        <td>62</td>
                         <td>0</td>
-                        <td>55</td>
-                        <td>0</td>
-                        <td>21</td>
+                        <td>14</td>
                         <td>WNW</td>
-                        <td>35</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-3</td>
+                        <td>Clear</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>0</td>
-                        <td>72</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>WNW</td>
-                        <td>31</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-3</td>
-                        <td>2</td>
+                        <td>0</td>
+                        <td>-4</td>
+                        <td>0</td>
                         <td>74</td>
                         <td>0</td>
                         <td>13</td>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "0",
-                 "-3",
-                 "-3"
+                 "-1",
+                 "-1",
+                 "-4"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "4",
-                 "1",
-                 "1"
+                 "3",
+                 "3",
+                 "0"
                ]
              }
            ]
@@ -162,7 +162,7 @@
                "data":[
                  "0",
                  "0",
-                 "2"
+                 "0"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "72",
+                 "62",
+                 "65",
                  "74"
                ]
              },
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "35",
-                 "31",
+                 "27",
+                 "25",
                  "27"
                ]
              }
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 18:05:04 2018</p>
+         Last Run: Wed Nov 14 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -250,11 +250,11 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>5</td>
-                        <td>90</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>0</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -266,7 +266,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>0</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -274,7 +274,7 @@
                         <td>-7</td>
                         <td>-12</td>
                         <td>3</td>
-                        <td>72</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -286,7 +286,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>2</td>
-                        <td>63</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -404,10 +404,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "90",
+                 "89",
                  "82",
-                 "72",
-                 "63"
+                 "71",
+                 "62"
                ]
              },
              {
@@ -416,8 +416,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "0",
-                 "0",
+                 "1",
+                 "1",
                  "1",
                  "1"
                ]
@@ -459,7 +459,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 18:05:04 2018</p>
+         Last Run: Wed Nov 14 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -484,35 +484,35 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>3</td>
-                        <td>0</td>
+                        <td>-1</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
                         <td>53</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>4</td>
                         <td>1</td>
-                        <td>48</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>W</td>
                         <td>49</td>
+                        <td>1</td>
+                        <td>14</td>
+                        <td>W</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -540,8 +540,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "0",
-                 "0"
+                 "-1",
+                 "1"
                ]
              },
              {
@@ -553,7 +553,7 @@
                "data":[
                  "1",
                  "3",
-                 "3"
+                 "4"
                ]
              }
            ]
@@ -621,9 +621,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "51",
-                 "48"
+                 "59",
+                 "53",
+                 "49"
                ]
              },
              {
@@ -632,9 +632,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
+                 "58",
                  "53",
-                 "49"
+                 "50"
                ]
              }
            ]
@@ -674,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 18:05:04 2018</p>
+         Last Run: Wed Nov 14 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -699,11 +699,11 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>47</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -711,11 +711,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>42</td>
+                        <td>WSW</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -723,11 +723,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>2</td>
-                        <td>71</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>39</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -836,9 +836,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "70",
-                 "71"
+                 "73",
+                 "74",
+                 "75"
                ]
              },
              {
@@ -847,9 +847,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "42",
-                 "39"
+                 "48",
+                 "44",
+                 "41"
                ]
              }
            ]
