--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 23:05:02 2018</p>
+         Last Run: Thu Nov 15 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>5</td>
-                        <td>90</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -44,23 +44,23 @@
                         <td>09:00 AM</td>
                         <td>Clear</td>
                         <td>-10</td>
-                        <td>-14</td>
+                        <td>-15</td>
                         <td>4</td>
-                        <td>82</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>SW</td>
+                        <td>10</td>
+                        <td>WSW</td>
                         <td>1</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
                         <td>-7</td>
-                        <td>-11</td>
+                        <td>-12</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>1</td>
                      </tr>
@@ -68,13 +68,13 @@
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>-4</td>
-                        <td>-7</td>
+                        <td>-8</td>
                         <td>2</td>
-                        <td>60</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>0</td>
+                        <td>2</td>
                      </tr>
                   </tbody>
                </table>
@@ -103,9 +103,9 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-18",
-                 "-14",
-                 "-11",
-                 "-7"
+                 "-15",
+                 "-12",
+                 "-8"
                ]
              },
              {
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "90",
-                 "82",
-                 "70",
-                 "60"
+                 "89",
+                 "78",
+                 "66",
+                 "56"
                ]
              },
              {
@@ -203,7 +203,7 @@
                  "1",
                  "1",
                  "1",
-                 "0"
+                 "2"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 23:05:02 2018</p>
+         Last Run: Thu Nov 15 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,7 +268,7 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
@@ -282,9 +282,9 @@
                         <td>1</td>
                         <td>54</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>54</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -296,7 +296,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>50</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -405,7 +405,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
+                 "59",
                  "54",
                  "51"
                ]
@@ -417,8 +417,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "58",
-                 "54",
-                 "50"
+                 "53",
+                 "49"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 23:05:02 2018</p>
+         Last Run: Thu Nov 15 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,7 +483,7 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>1</td>
-                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
@@ -495,7 +495,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -507,11 +507,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
                  "72",
-                 "73"
+                 "73",
+                 "74"
                ]
              },
              {
@@ -633,7 +633,7 @@
                "data":[
                  "50",
                  "46",
-                 "43"
+                 "44"
                ]
              }
            ]
