--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 00:05:02 2018</p>
+         Last Run: Thu Nov 15 01:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -31,50 +31,50 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-13</td>
-                        <td>-18</td>
-                        <td>5</td>
-                        <td>89</td>
+                        <td>-12</td>
+                        <td>-17</td>
+                        <td>4</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>1</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
                         <td>-10</td>
-                        <td>-15</td>
-                        <td>4</td>
-                        <td>78</td>
+                        <td>-14</td>
+                        <td>3</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>1</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-7</td>
-                        <td>-12</td>
-                        <td>3</td>
-                        <td>66</td>
+                        <td>-6</td>
+                        <td>-10</td>
+                        <td>2</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>1</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-4</td>
-                        <td>-8</td>
-                        <td>2</td>
-                        <td>56</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>1</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>2</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -102,10 +102,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-18",
-                 "-15",
-                 "-12",
-                 "-8"
+                 "-17",
+                 "-14",
+                 "-10",
+                 "-7"
                ]
              },
              {
@@ -115,10 +115,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-13",
+                 "-12",
                  "-10",
-                 "-7",
-                 "-4"
+                 "-6",
+                 "-3"
                ]
              }
            ]
@@ -176,10 +176,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
                  "4",
                  "3",
-                 "2"
+                 "2",
+                 "1"
                ]
              },
              {
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "89",
-                 "78",
-                 "66",
-                 "56"
+                 "87",
+                 "77",
+                 "63",
+                 "53"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
-                 "1",
-                 "1",
-                 "2"
+                 "2",
+                 "2",
+                 "2",
+                 "4"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 00:05:02 2018</p>
+         Last Run: Thu Nov 15 01:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -265,10 +265,10 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>1</td>
-                        <td>-3</td>
-                        <td>1</td>
-                        <td>59</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
@@ -277,22 +277,22 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>4</td>
+                        <td>0</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>52</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>W</td>
                         <td>53</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>4</td>
+                        <td>5</td>
+                        <td>2</td>
                         <td>1</td>
-                        <td>1</td>
-                        <td>51</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
@@ -323,9 +323,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
-                 "-1",
-                 "1"
+                 "-2",
+                 "0",
+                 "2"
                ]
              },
              {
@@ -335,9 +335,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
-                 "3",
-                 "4"
+                 "2",
+                 "4",
+                 "5"
                ]
              }
            ]
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
-                 "54",
-                 "51"
+                 "57",
+                 "52",
+                 "49"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 00:05:02 2018</p>
+         Last Run: Thu Nov 15 01:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -480,29 +480,17 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>1</td>
                         <td>72</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>50</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>1</td>
-                        <td>73</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>46</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
@@ -511,7 +499,19 @@
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>44</td>
+                        <td>45</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>1</td>
+                        <td>76</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
                  "-6",
-                 "-6"
+                 "-6",
+                 "-7"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
                  "-2",
-                 "-2"
+                 "-2",
+                 "-3"
                ]
              }
            ]
@@ -621,8 +621,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "72",
-                 "73",
-                 "74"
+                 "74",
+                 "76"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "46",
-                 "44"
+                 "49",
+                 "45",
+                 "42"
                ]
              }
            ]
