--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 05:05:02 2018</p>
+         Last Run: Thu Nov 15 06:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-12</td>
                         <td>-17</td>
                         <td>4</td>
-                        <td>88</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -46,10 +46,10 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>3</td>
-                        <td>78</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>2</td>
                      </tr>
                      <tr>
@@ -58,11 +58,11 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>2</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>3</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -74,7 +74,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -188,9 +188,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "88",
-                 "78",
-                 "64",
+                 "89",
+                 "80",
+                 "65",
                  "54"
                ]
              },
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "1",
                  "2",
                  "2",
-                 "3",
-                 "5"
+                 "4"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 05:05:02 2018</p>
+         Last Run: Thu Nov 15 06:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,7 +268,7 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
@@ -280,11 +280,11 @@
                         <td>5</td>
                         <td>2</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>1</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>87</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -292,11 +292,11 @@
                         <td>7</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>41</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>85</td>
+                        <td>81</td>
                      </tr>
                   </tbody>
                </table>
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "44",
-                 "41"
+                 "50",
+                 "45",
+                 "43"
                ]
              },
              {
@@ -417,8 +417,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "89",
-                 "87",
-                 "85"
+                 "85",
+                 "81"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 05:05:02 2018</p>
+         Last Run: Thu Nov 15 06:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -480,38 +480,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-4</td>
-                        <td>1</td>
-                        <td>66</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>WSW</td>
-                        <td>47</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-5</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>68</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>42</td>
+                        <td>WSW</td>
+                        <td>30</td>
                      </tr>
                      <tr>
-                        <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-1</td>
+                        <td>-5</td>
                         <td>1</td>
                         <td>70</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>38</td>
+                        <td>26</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Clear</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>1</td>
+                        <td>71</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,7 +538,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-5",
                  "-5",
                  "-6"
                ]
@@ -550,7 +550,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
+                 "-1",
                  "-1",
                  "-2"
                ]
@@ -609,7 +609,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
+                 "2",
                  "1",
                  "1"
                ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
                  "68",
-                 "70"
+                 "70",
+                 "71"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "42",
-                 "38"
+                 "30",
+                 "26",
+                 "22"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 05:05:02 2018</p>
+         Last Run: Thu Nov 15 06:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -702,7 +702,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -713,8 +713,8 @@
                         <td>67</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>W</td>
-                        <td>66</td>
+                        <td>WSW</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -725,8 +725,8 @@
                         <td>68</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>W</td>
-                        <td>64</td>
+                        <td>WSW</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
                  "66",
-                 "64"
+                 "69",
+                 "71"
                ]
              }
            ]
