--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 17:05:02 2018</p>
+         Last Run: Thu Nov 15 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -45,12 +45,12 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>4</td>
-                        <td>80</td>
+                        <td>3</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -58,11 +58,11 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>2</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -177,7 +177,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "4",
+                 "3",
                  "2",
                  "1"
                ]
@@ -189,8 +189,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "86",
-                 "80",
-                 "68",
+                 "81",
+                 "69",
                  "56"
                ]
              },
@@ -201,8 +201,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "1",
-                 "4",
-                 "7",
+                 "3",
+                 "8",
                  "11"
                ]
              }
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 17:05:02 2018</p>
+         Last Run: Thu Nov 15 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,9 +268,9 @@
                         <td>5</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>47</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
                         <td>61</td>
                      </tr>
@@ -280,9 +280,9 @@
                         <td>7</td>
                         <td>4</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>43</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>W</td>
                         <td>62</td>
                      </tr>
@@ -292,11 +292,11 @@
                         <td>8</td>
                         <td>6</td>
                         <td>0</td>
-                        <td>38</td>
-                        <td>1</td>
-                        <td>14</td>
+                        <td>41</td>
+                        <td>0</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>62</td>
+                        <td>63</td>
                      </tr>
                   </tbody>
                </table>
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "40",
-                 "38"
+                 "47",
+                 "43",
+                 "41"
                ]
              },
              {
@@ -418,7 +418,7 @@
                "data":[
                  "61",
                  "62",
-                 "62"
+                 "63"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 17:05:02 2018</p>
+         Last Run: Thu Nov 15 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,23 +483,23 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>1</td>
-                        <td>67</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>19</td>
+                        <td>WSW</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>1</td>
-                        <td>68</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>18</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>67</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -539,7 +539,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-5",
+                 "-6",
                  "-6"
                ]
              },
@@ -551,7 +551,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-1",
-                 "-1",
+                 "-2",
                  "-2"
                ]
              }
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "68",
-                 "67"
+                 "69",
+                 "70",
+                 "69"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "18",
-                 "17"
+                 "24",
+                 "21",
+                 "18"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 17:05:02 2018</p>
+         Last Run: Thu Nov 15 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,7 +694,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
@@ -702,23 +702,11 @@
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>88</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
-                        <td>0</td>
-                        <td>-4</td>
-                        <td>1</td>
-                        <td>62</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>WSW</td>
-                        <td>89</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>0</td>
                         <td>-4</td>
                         <td>1</td>
@@ -726,7 +714,19 @@
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>89</td>
+                        <td>76</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>0</td>
+                        <td>-4</td>
+                        <td>2</td>
+                        <td>65</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>78</td>
                      </tr>
                   </tbody>
                </table>
@@ -826,7 +826,7 @@
                "data":[
                  "1",
                  "1",
-                 "1"
+                 "2"
                ]
              },
              {
@@ -836,8 +836,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "61",
-                 "62",
-                 "64"
+                 "64",
+                 "65"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "89",
-                 "89"
+                 "73",
+                 "76",
+                 "78"
                ]
              }
            ]
